--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 <body>
   <div class="card">
-    <img src="/images/illustration-hero.svg" alt="">
+    <img src="./images/illustration-hero.svg" alt="">
     <p class="title">Order Summary</p>
     <p class="p" >
       You can now listen to millions of songs, audiobooks, and podcasts on any 
       device anywhere you like!
     </p>
     <div class="info">
-      <div class="ico"><img src="/images/icon-music.svg" alt=""></div>
+      <div class="ico"><img src="./images/icon-music.svg" alt=""></div>
       <div class="se">
         <span class="name">Annual Plan</span>  
         <br>
